--- a/src/style/content.css
+++ b/src/style/content.css
@@ -3,3 +3,19 @@
   flex-direction: column;
   height: calc(100% - 57px);
   justify-content: center; }
+
+.content .sub-title {
+  font-weight: normal;
+  margin-bottom: 10px; }
+
+.code-wrapper {
+  margin: 10px 0; }
+
+.fs2 {
+  font-size: 1.8rem; }
+
+.mg-left {
+  margin-left: 30px; }
+
+.description {
+  margin-bottom: 20px; }
