--- a/src/style/content.scss
+++ b/src/style/content.scss
@@ -5,4 +5,24 @@
     height: calc(100% - 57px);
     justify-content: center;
   }
+  .sub-title {
+    font-weight: normal;
+    margin-bottom: 10px;
+  }
+}
+
+.code-wrapper {
+  margin: 10px 0;
+}
+
+.fs2 {
+  font-size: 1.8rem;
+}
+
+.mg-left {
+  margin-left: 30px;
+}
+
+.description {
+  margin-bottom: 20px;
 }
