--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -2,28 +2,36 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif; }
+  font-family: "Raleway", sans-serif; }
+
+body {
+  background: #35a7ff; }
 
 .container {
-  max-width: 1200px;
+  max-width: 920px;
   padding: 15px;
   margin: 0 auto; }
 
-p, h1, h2, h3, span {
+p,
+h1,
+h2,
+h3,
+span {
   color: #fff; }
 
 p {
   font-size: 1.3rem;
   line-height: 2rem; }
 
-ul, ol {
+ul,
+ol {
   padding-left: 15px; }
 
 li {
   color: #fff; }
 
 .opacity-3 {
-  opacity: .3; }
+  opacity: 0.3; }
 
 .fs {
   font-size: 1.3rem; }
@@ -34,7 +42,7 @@ li {
   .fs-sm {
     font-size: 1rem; }
   .fs-xs {
-    font-size: .8rem; }
+    font-size: 0.8rem; }
 
 .mg-bottom {
   margin-bottom: 20px; }
