--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,28 +2,36 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif; }
+  font-family: "Raleway", sans-serif; }
+
+body {
+  background: #35a7ff; }
 
 .container {
-  max-width: 1200px;
+  max-width: 920px;
   padding: 15px;
   margin: 0 auto; }
 
-p, h1, h2, h3, span {
+p,
+h1,
+h2,
+h3,
+span {
   color: #fff; }
 
 p {
   font-size: 1.3rem;
   line-height: 2rem; }
 
-ul, ol {
+ul,
+ol {
   padding-left: 15px; }
 
 li {
   color: #fff; }
 
 .opacity-3 {
-  opacity: .3; }
+  opacity: 0.3; }
 
 .fs {
   font-size: 1.3rem; }
@@ -34,7 +42,7 @@ li {
   .fs-sm {
     font-size: 1rem; }
   .fs-xs {
-    font-size: .8rem; }
+    font-size: 0.8rem; }
 
 .mg-bottom {
   margin-bottom: 20px; }
@@ -66,3 +74,19 @@ li {
   flex-direction: column;
   height: calc(100% - 57px);
   justify-content: center; }
+
+.content .sub-title {
+  font-weight: normal;
+  margin-bottom: 10px; }
+
+.code-wrapper {
+  margin: 10px 0; }
+
+.fs2 {
+  font-size: 1.8rem; }
+
+.mg-left {
+  margin-left: 30px; }
+
+.description {
+  margin-bottom: 20px; }
